tests/invalid/resolver/duplicate_symbols.out
tests/failing/resolver/duplicate_symbols.ri:28:9: error: another symbol with this name already exists: `RuntimeError`
     |
  28 | errtype RuntimeError;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:31:8: error: another symbol with this name already exists: `Gota`
     |
  31 | struct Gota { }
     |        ^
tests/failing/resolver/duplicate_symbols.ri:35:12: error: another symbol with this name already exists: `App`
     |
  35 |     struct App { }
     |            ^
tests/failing/resolver/duplicate_symbols.ri:42:9: error: field `art` is already declared
     |
  42 |         art: bool;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:46:7: error: union `Obj` has duplicate variant type `i32`
     |
  46 | union Obj {
     |       ^
tests/failing/resolver/duplicate_symbols.ri:51:6: error: enum `State` has duplicate variant `Idle`
     |
  51 | enum State {
     |      ^
tests/failing/resolver/duplicate_symbols.ri:56:8: error: cannot extend non-local types
     |
  56 | extend module::Game { }
     |        ^
rivetc: error: could not compile package `core`, aborting due to 7 previous errors